<resources>

    <!-- Naming Conventions:
     1) Names start with lowercase letters
     2) Underscores are only used to delimit different part of the address in name
     3) Camel case is used within suffix of the address, i.e. the name in itself.
     e.g. fileName_activity_stringPurpose, main_activity_title
     -->

    <string name="app_name">Capsule</string>

    <!-- Strings over login -->
    <string name="title_activity_login">Sign in</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="LogInActivityLabel">Log in</string>

    <!-- Strings over the MainActivity's settings -->
    <string name="action_settings">Settings</string>
    <string name="action_signOut">Sign out</string>

    <!-- Strings over capsule_fragment_page -->
    <string name="capsuleMessageDefaultText"> Write your message.. </string>
    <string name="attachPicture"> Attach picture</string>
    <string name="takePicture"> Take picture</string>
    <string name="checkInButton"> Check In</string>
    <string name="sendCapsuleButton"> Send Capsule </string>

    <!-- Search bar -->
    <string name="search_hint">Search contacts</string>

    <string name="next">Next</string>

    <!--Capsule Fragment's menu item -->
    <string name="friends">Friends</string>

    <!-- activity_friends -->
    <string name="addFriends">Add Friends</string>
    <string name="myFriends">My Friends</string>

    <!-- menu_my_friends_activity -->
    <string name="myFriendsSearchHint">Search friends</string>

    <!-- DeliveryDateTimeActivity -->
    <string name="deliveryDateTime_activity_label">Set opening date</string>
    <string name="deliveryDateTime_activity_dateTitle">Date</string>
    <string name="deliveryDateTime_activity_timeTitle">Time</string>

    <!-- Toast strings -->
    <string name="youAreAlreadyFriendWith">You are already friend with</string>
    <string name="friendAdded">Friend added !</string>

    <!-- MapActivity TODO: some of these can be deleted as they are used to show place APIs features -->
    <string name="map_activity_label">Set location lock</string>
    <string name="map_activity_radius">Radius: </string>
    <string name="map_activity_distanceUnit"> Km</string>

    <!-- Firebase node names -->
    <string name="capsulesNode">capsules</string>
    <string name="userCapsulesNode">userCapsules</string>


</resources>