<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id= "@+id/capsuleMessage"
        android:layout_marginTop = "10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint = "@string/capsuleMessageDefaultText"
        android:layout_weight = "5"
        android:layout_gravity="top"
         />
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">
    <Button
        android:id="@+id/attachPictureButton"
        android:text = "@string/attachPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight = "1"
        android:layout_gravity="left"/>

    <Button
        android:id="@+id/takePictureButton"
        android:text = "@string/takePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/attachPictureButton"
        android:layout_weight = "1"
        android:layout_gravity="center"
        />

    <Button
        android:id = "@+id/checkInButton"
        android:text = "@string/checkInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/takePictureButton"
        android:layout_weight = "1"
        />
</RelativeLayout>

    <Button
        android:id = "@+id/createCapsuleButton"
        android:text ="@string/sendCapsuleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight = "1"
        />

</LinearLayout>